adding a previous conferences page + automating the archive list

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -377,6 +377,7 @@
           <a class="btn btn-sm btn-light" href="{{ `conference` | absURL }}" role="button">Conference website</a>
           <a class="btn btn-sm btn-light" href="{{ `proceedings` | absURL }}" role="button">Proceedings</a>
           <a class="btn btn-sm btn-light" href="{{ `proceedings#editorial-team` | relURL }}" role="button">Editorial Team</a>
+          <a class="btn btn-sm btn-light" href="{{ `archive` | relURL }}" role="button">Archive</a>
         </div>
       </div>
     </div>
