--- a/themes/sumo-theme/layouts/_default/single.html
+++ b/themes/sumo-theme/layouts/_default/single.html
@@ -20,7 +20,7 @@
     <div class="col-md-10 contact-div">
       {{ if isset .Params "image" }}<img src="../images/{{ $.Params.image }}" style="border-radius: .6rem .6rem 0 0; margin-top:-30px; margin-left: -30px; width: calc(100% + 60px); margin-bottom: 40px;" class="img-responsive" alt="Conference image"/>{{ end }}
       {{ .Content }}</div>
-    <div class="col-md-2"><div style="border-left: 1px solid #d4d4d4; padding-left: 10px;">{{- partial "conference_archive.html" . -}}<br><br>{{- partial "toc.html" . -}}{{ if ne (isset .Params "about-conference") true }}{{- partial "info_proceedings_editors.html" . -}}{{ end }}</div></div>
+    <div class="col-md-2"><div style="border-left: 1px solid #d4d4d4; padding-left: 10px;">{{- partial "toc.html" . -}}{{- partial "conference_archive.html" . -}}{{ if ne (isset .Params "about-conference") true }}{{- partial "info_proceedings_editors.html" . -}}{{ end }}</div></div>
     </div></div>
     {{ else }}
     {{ .Content }}
