TH Wildau user logo added

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -344,6 +344,7 @@
   <a href="https://www.nec.com/" target="_blank"><image src="{{ `images/logos/NEC.svg` | absURL }}" alt="NEC" class="user-logo"></image></a>
   <a href="https://www.notraffic.com/" target="_blank"><image src="{{ `images/logos/notraffic_logo.svg` | absURL }}" alt="NoTraffic" class="user-logo"></image></a>
   <a href="https://7p-mobility.com/" target="_blank"><image src="{{ `images/logos/7P.png` | absURL }}" alt="Seven Principles Mobility" class="user-logo"></image></a>
+  <a href="https://www.th-wildau.de/" target="_blank"><image src="{{ `images/logos/TH-Wildau.png` | absURL }}" alt="Technische Hochschule Wildau" class="user-logo"></image></a>
   <a href="https://www.tu-braunschweig.de/" target="_blank"><image src="{{ `images/logos/TUBraunschweig.jpg` | absURL }}" alt="Technische Universität Braunschweig" class="user-logo"></image></a>
   <a href="https://transcality.com/" target="_blank"><image src="{{ `images/logos/Transcality.png` | absURL }}" alt="Transcality" class="user-logo"></image></a>
   <a href="https://www.vector.com/" target="_blank"><image src="{{ `images/logos/vector-logo.png` | absURL }}" alt="Vector" class="user-logo"></image></a>
