adding new anchor link

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -321,7 +321,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12 text-center">
-      <h2 class="section-heading">Trusted by</h2>
+      <h2 class="section-heading" id="trusted-by">Trusted by</h2>
     </div>
   </div>
 
