--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -343,6 +343,7 @@
   <a href="https://www.joinville.sc.gov.br/institucional/sepur/" target="_blank"><image src="{{ `images/logos/Logotipo_Prefeitura_horizontal_positivo.png` | absURL }}" alt="City of Joinville" class="user-logo"></image></a>
   <a href="https://www.nec.com/" target="_blank"><image src="{{ `images/logos/NEC.svg` | absURL }}" alt="NEC" class="user-logo"></image></a>
   <a href="https://www.notraffic.com/" target="_blank"><image src="{{ `images/logos/notraffic_logo.svg` | absURL }}" alt="NoTraffic" class="user-logo"></image></a>
+  <a href="https://www.schlothauer.de/" target="_blank"><image src="{{ `images/logos/Logo-SW.png` | absURL }}" alt="SCHLOTHAUER & WAUER" class="user-logo"></image></a>
   <a href="https://7p-mobility.com/" target="_blank"><image src="{{ `images/logos/7P.png` | absURL }}" alt="Seven Principles Mobility" class="user-logo"></image></a>
   <a href="https://www.th-wildau.de/" target="_blank"><image src="{{ `images/logos/TH-Wildau.png` | absURL }}" alt="Technische Hochschule Wildau" class="user-logo"></image></a>
   <a href="https://www.tu-braunschweig.de/" target="_blank"><image src="{{ `images/logos/TUBraunschweig.jpg` | absURL }}" alt="Technische Universität Braunschweig" class="user-logo"></image></a>
