minor - adding some margin for small screens

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -377,10 +377,10 @@
           <br><br>
           <img width="80%" style="border: 8px solid rgb(125,174,125); border-radius: 14px" src="{{ `images/conference_2023.jpg` | absURL }}" alt="Picture of the 2023 conference attendees">
           <br><br>
-          <a class="btn btn-sm btn-light" href="{{ `conference` | absURL }}" role="button">Conference website</a>
-          <a class="btn btn-sm btn-light" href="{{ `proceedings` | absURL }}" role="button">Proceedings</a>
-          <a class="btn btn-sm btn-light" href="{{ `proceedings#editorial-team` | relURL }}" role="button">Editorial Team</a>
-          <a class="btn btn-sm btn-light" href="{{ `archive` | relURL }}" role="button">Archive</a>
+          <a class="btn btn-sm btn-light mb-1" href="{{ `conference` | absURL }}" role="button">Conference website</a>
+          <a class="btn btn-sm btn-light mb-1" href="{{ `proceedings` | absURL }}" role="button">Proceedings</a>
+          <a class="btn btn-sm btn-light mb-1" href="{{ `proceedings#editorial-team` | relURL }}" role="button">Editorial Team</a>
+          <a class="btn btn-sm btn-light mb-1" href="{{ `archive` | relURL }}" role="button">Archive</a>
         </div>
       </div>
     </div>
