using the sourceforge docs backup

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -17,7 +17,7 @@
           <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/Downloads.php#macos"><i class="fab fa-apple"></i> macOS</a>
         </div>
       </div>
-    <br><a href="{{ $.Site.Params.docsURL }}/Downloads.php#sumo_-_latest_development_version" class="green-text"><small>Latest Development Version (Nightly Snapshots) <i class="fas fa-angle-right"></i></small></a>
+    <br><a href="{{ $.Site.Params.docsURL }}/Downloads.html#sumo_-_latest_development_version" class="green-text"><small>Latest Development Version (Nightly Snapshots) <i class="fas fa-angle-right"></i></small></a>
     <br><a href="https://sourceforge.net/projects/sumo/files/sumo/" class="green-text"><small>Older releases <i class="fas fa-angle-right"></i></small></a></p>
 
     <a class="github-button" href="https://github.com/eclipse-sumo/sumo" data-size="large" class="btn btn-social-icon btn-lg btn-github"><span class="fab fa-github"> View on GitHub</span></a>
@@ -285,7 +285,7 @@
             <i class="fas fa-tachometer-alt fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="feature-heading">Performance</h4>
-          <p class="text-muted">Boost your simulation with an unlimited network size, an unlimited amount of simulated vehicles and an unlimited simulation time<a href="https://sumo.dlr.de/docs/FAQ.html#are_there_any_limits_in_regard_to_the_size_of_a_simulation_scenario">*</a></p>
+          <p class="text-muted">Boost your simulation with an unlimited network size, an unlimited amount of simulated vehicles and an unlimited simulation time<a href="https://sumo.sourceforge.net/docs/FAQ.html#are_there_any_limits_in_regard_to_the_size_of_a_simulation_scenario">*</a></p>
         </div>
 
         <div class="col-md-4 mb-5">
