using the docsURL parameter in more places

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -285,7 +285,7 @@
             <i class="fas fa-tachometer-alt fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="feature-heading">Performance</h4>
-          <p class="text-muted">Boost your simulation with an unlimited network size, an unlimited amount of simulated vehicles and an unlimited simulation time<a href="https://sumo.sourceforge.net/docs/FAQ.html#are_there_any_limits_in_regard_to_the_size_of_a_simulation_scenario">*</a></p>
+          <p class="text-muted">Boost your simulation with an unlimited network size, an unlimited amount of simulated vehicles and an unlimited simulation time<a href="{{ $.Site.Params.docsURL }}/FAQ.html#are_there_any_limits_in_regard_to_the_size_of_a_simulation_scenario">*</a></p>
         </div>
 
         <div class="col-md-4 mb-5">
