--- a/themes/sumo-theme/layouts/partials/conference_cards.html
+++ b/themes/sumo-theme/layouts/partials/conference_cards.html
@@ -20,7 +20,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Workshop 2010</h5>
                     <p class="card-text">November 11-12 • Berlin</p>
-                    <a href="https://sumo.sourceforge.net/docs/SumoWorkshop2010.html" class="btn btn-sm btn-outline-info">Learn more</a>
+                    <a href="{{ $.Site.Params.docsURL }}/SumoWorkshop2010.html" class="btn btn-sm btn-outline-info">Learn more</a>
                 </div>
             </div>
         </div>
