adding links to meeting minutes

--- a/themes/sumo-theme/layouts/partials/footer.html
+++ b/themes/sumo-theme/layouts/partials/footer.html
@@ -42,6 +42,7 @@
                       <li><a href="https://sourceforge.net/projects/sumo/">SourceForge</a></li>
                       <!-- <li><a href="https://dlr.de/ts/en/sumo">SUMO @ DLR</a></li> -->
                       <li><a href="https://projects.eclipse.org/projects/automotive.sumo">SUMO @ Eclipse</a></li>
+                      <li><a href="{{ `minutes` | absURL }}">Developer Meeting Minutes</a></li>
                     </ul>
                   </div>
                   <div class="col-md text-left"><b>Community</b>
