--- a/themes/sumo-theme/layouts/partials/footer.html
+++ b/themes/sumo-theme/layouts/partials/footer.html
@@ -49,7 +49,7 @@
                     <ul class="ul-no-bullet">
                       <li><a href="{{ `contact` | absURL }}">Mailing lists</a></li>
                       <li><a href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org">Matrix room</a></li>
-                      <li><a href="{{ `conference` | absURL }}">SUMO User Conference</a></li>
+                      <li><a href="{{ `conference` | absURL }}">SUMO Conference</a></li>
                       <li><a href="https://openmobility.eclipse.org/">openMobility Interest Group</a></li>
                     </ul>
                   </div>
