--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -148,14 +148,13 @@
         <a href="{{ `about#citing-sumo` | relURL }}">Citing SUMO</a>
       </div>
 
-      
+
 <!--       <div class="alert alert-success mt-4" role="alert">
         <a href="{{ `conference` | absURL }}" style="text-decoration: none;">
         <center><img src="{{ `images/logo_2025.png` | absURL }}" style="width:80%; margin-bottom:10px" alt="Conference logo" class="img-responsive"/></center>
 
         SUMO User Conference 2025: <b>May 12-14</b> in Berlin.</a>
       </div> -->
-    
 
 <!-- <a href="{{ `conference` | absURL }}" class="text-decoration-none" style="color: inherit">
         <div class="card">
@@ -168,12 +167,10 @@
         </div>
       </a> -->
 
-      <script>
-        let conference_date = new Date('05/13/2024');
-        let current_date = new Date();
-        var remainingDays = Math.ceil((conference_date.getTime() - current_date.getTime()) / (1000 * 3600 * 24));
+<!--       <script>
+        var remainingDays = Math.ceil((new Date("06/01/2026").getTime() - new Date().getTime()) / (1000 * 3600 * 24));
         document.getElementById("remaining-days").innerHTML = remainingDays;
-      </script>
+      </script> -->
 
     </div>
   </div>
