--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -135,7 +135,7 @@
       <div class="d-md-none" style="margin-top: 14px;"></div>
       <div class="btn-group btn-group-lg" style="width: 100%; margin-bottom: 10px;">
         <a class="btn btn-light" href="https://github.com/eclipse-sumo/sumo" aria-label="GitHub"><span class="fab fa-github"></span></a>
-        <a class="btn btn-light" href="https://twitter.com/eclipsesumo" aria-label="X"><span class="fab fa-x-twitter"></span></a>
+        <a class="btn btn-light" href="https://x.com/eclipsesumo" aria-label="X"><span class="fab fa-x-twitter"></span></a>
         <a class="btn btn-light" href="https://facebook.com/simulationofurbanmobility" aria-label="Facebook"><span class="fab fa-facebook"></span></a>
         <a class="btn btn-light" href="https://instagram.com/eclipse.sumo" aria-label="Instagram"><span class="fab fa-instagram"></span></a>
         <a class="btn btn-light" href="https://www.threads.net/@eclipse.sumo" aria-label="Threads"><span class="fab fa-threads"></span></a>
