adding poster and moments submission notice

--- a/themes/sumo-theme/layouts/partials/toc.html
+++ b/themes/sumo-theme/layouts/partials/toc.html
@@ -1,3 +1,3 @@
-<div class="d-none d-md-block"><p class="sidebar-title"><b>What's on this page</b></p>
+<div class="d-none d-md-block"><p class="sidebar-title"><b>On this page</b></p>
 {{ .TableOfContents }}
 </div>
