--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -122,11 +122,15 @@
 <div class="container" style="margin-top: 60px; margin-bottom: 60px;">
 
   <div class="row">
-<!--     <div class="col-12" >
-      <div class="alert alert-warning" role="alert">
-        Test
+<div class="col-12" >
+      <div class="alert alert-info" role="alert">
+        Join us for our regular Zoom meetings aimed at enhancing community participation through discussions on development and open GitHub issues.
+        <br><br>
+        Meetings are scheduled every second Thursday at 13:00 CET, starting January 15th. We provide the meeting link upon request - please reach out at sumo@dlr.de to participate.
+        <br><br>
+        <a class="btn btn-outline-info mb-1" href="{{ `minutes` | relURL }}" role="button">Check out the meeting minutes</a>
       </div>
-    </div> -->
+    </div>
     <div class="col-md-8 text-justify" >
         {{ .Content }}
     </div>
