new Developer Meeting starting time

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -126,7 +126,7 @@
       <div class="alert alert-info" role="alert">
         Join us for our regular Zoom meetings aimed at enhancing community participation through discussions on development and open GitHub issues.
         <br><br>
-        Meetings are scheduled every second Thursday at 13:00 CET, starting January 15th. We provide the meeting link upon request - please reach out at sumo@dlr.de to participate.
+        Meetings are scheduled every second Thursday at 10:00 a.m. CET, starting January 15th. We provide the meeting link upon request - please reach out at sumo@dlr.de to participate.
         <br><br>
         <a class="btn btn-outline-info mb-1" href="{{ `minutes` | relURL }}" role="button">Check out the meeting minutes</a>
       </div>
