--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -126,7 +126,9 @@
       <div class="alert alert-info" role="alert">
         Join us for our regular Zoom meetings aimed at enhancing community participation through discussions on development and open GitHub issues.
         <br><br>
-        Meetings are scheduled every second Thursday at 10:00 a.m. CET, starting January 15th. We provide the meeting link upon request - please reach out at sumo@dlr.de to participate.
+        Meetings are scheduled every second Thursday at 10:00 a.m. CET. We provide the meeting link upon request - please reach out at sumo@dlr.de to participate.
+        <br><br>
+        <b>Next meeting: January 29th.</b>
         <br><br>
         <a class="btn btn-outline-info mb-1" href="{{ `minutes` | relURL }}" role="button">Check out the meeting minutes</a>
       </div>
@@ -143,9 +145,10 @@
         <a class="btn btn-light" href="https://facebook.com/simulationofurbanmobility" aria-label="Facebook"><span class="fab fa-facebook"></span></a>
         <a class="btn btn-light" href="https://instagram.com/eclipse.sumo" aria-label="Instagram"><span class="fab fa-instagram"></span></a>
         <a class="btn btn-light" href="https://www.threads.net/@eclipse.sumo" aria-label="Threads"><span class="fab fa-threads"></span></a>
+        <a class="btn btn-light" href="https://bsky.app/profile/eclipse-sumo.bsky.social" aria-label="Bluesky"><span class="fa-brands fa-bluesky"></span></a>
         <a class="btn btn-light" href="https://www.linkedin.com/groups/5156801/" aria-label="Linkedin"><span class="fab fa-linkedin"></span></a>
-        <a class="btn btn-light" href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org" aria-label="Matrix"><span class="fas fa-comments"></span></a>
-        <a class="btn btn-light" href="{{ `contact` | absURL }}" aria-label="contact"><span class="fas fa-envelope"></span></a>
+<!--         <a class="btn btn-light" href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org" aria-label="Matrix"><span class="fas fa-comments"></span></a>
+        <a class="btn btn-light" href="{{ `contact` | absURL }}" aria-label="contact"><span class="fas fa-envelope"></span></a> -->
       </div>
       <div>
         Let us know if your publication mentions SUMO!
