--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -122,7 +122,16 @@
 <div class="container" style="margin-top: 60px; margin-bottom: 60px;">
 
   <div class="row">
-<div class="col-12" >
+<div class="col-12">
+
+<div class="alert alert-success" role="alert">
+  Registration for the SUMO Conference 2026 is now open: <a href="https://sumo2026.welcome-manager.de/">https://sumo2026.welcome-manager.de/</a>
+  <br>
+  <small><b>Please keep in mind that the registration will close on May 15, 2026 (at 23:59 CEST).</b></small>
+  <br><br>
+  <a class="btn btn-sm btn-outline-info mb-1" href="{{ `conference` | relURL }}" role="button">Conference website</a>
+</div>
+
       <div class="alert alert-info" role="alert">
         Join us for our regular Zoom meetings aimed at enhancing community participation through discussions on development and open GitHub issues.
         <br><br>
@@ -130,7 +139,7 @@
         <br><br>
         <b>Next meeting: January 29th.</b>
         <br><br>
-        <a class="btn btn-outline-info mb-1" href="{{ `minutes` | relURL }}" role="button">Check out the meeting minutes</a>
+        <a class="btn btn-sm btn-outline-info mb-1" href="{{ `minutes` | relURL }}" role="button">Check out the meeting minutes</a>
       </div>
     </div>
     <div class="col-md-8 text-justify" >
