embedding the Bluesky timeline on the landing page

--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -159,11 +159,6 @@
 <!--         <a class="btn btn-light" href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org" aria-label="Matrix"><span class="fas fa-comments"></span></a>
         <a class="btn btn-light" href="{{ `contact` | absURL }}" aria-label="contact"><span class="fas fa-envelope"></span></a> -->
       </div>
-      <div>
-        Let us know if your publication mentions SUMO!
-        <a href="{{ `about#citing-sumo` | relURL }}">Citing SUMO</a>
-      </div>
-
 
 <!--       <div class="alert alert-success mt-4" role="alert">
         <a href="{{ `conference` | absURL }}" style="text-decoration: none;">
@@ -188,9 +183,14 @@
         document.getElementById("remaining-days").innerHTML = remainingDays;
       </script> -->
 
+      <script src="https://blueskytimeline.com/timeline.js" async data-handle="eclipse-sumo.bsky.social" data-theme="light" data-width="420" data-height="500" data-lang="en" data-ui="1" data-prof="0" data-pin="0" data-rp="1" data-thread="1"></script>
+
     </div>
   </div>
-
+      <div class="mt-4 text-center">
+        Let us know if your publication mentions SUMO!
+        <a href="{{ `about#citing-sumo` | relURL }}">Citing SUMO</a>
+      </div>
 </div>
 <!-- /Content -->
 
