reducing number of redirects

--- a/themes/sumo-theme/layouts/partials/footer.html
+++ b/themes/sumo-theme/layouts/partials/footer.html
@@ -25,7 +25,7 @@
           <div class="row" style="font-size: small;">
                   <div class="col-md text-left"><b>SUMO</b>
                   <ul class="ul-no-bullet">
-                  <li><a href="{{ `about` | absURL }}">About</a></li>
+                  <li><a href="{{ `about/` | absURL }}">About</a></li>
                   <li><a href="{{ $.Site.Params.docsURL }}/Downloads.html">Downloads</a></li>
                   <li><a href="{{ $.Site.Params.docsURL }}/ChangeLog.html">ChangeLog</a></li>
                   <li><a href="{{ $.Site.Params.docsURL }}/Libraries_Licenses.html">License</a></li>
@@ -42,20 +42,20 @@
                       <li><a href="https://sourceforge.net/projects/sumo/">SourceForge</a></li>
                       <!-- <li><a href="https://dlr.de/ts/en/sumo">SUMO @ DLR</a></li> -->
                       <li><a href="https://projects.eclipse.org/projects/automotive.sumo">SUMO @ Eclipse</a></li>
-                      <li><a href="{{ `minutes` | absURL }}">Developer Meeting Minutes</a></li>
+                      <li><a href="{{ `minutes/` | absURL }}">Developer Meeting Minutes</a></li>
                     </ul>
                   </div>
                   <div class="col-md text-left"><b>Community</b>
                     <ul class="ul-no-bullet">
-                      <li><a href="{{ `contact` | absURL }}">Mailing lists</a></li>
+                      <li><a href="{{ `contact/` | absURL }}">Mailing lists</a></li>
                       <li><a href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org">Matrix room</a></li>
-                      <li><a href="{{ `conference` | absURL }}">SUMO Conference</a></li>
+                      <li><a href="{{ `conference/` | absURL }}">SUMO Conference</a></li>
                       <li><a href="https://openmobility.eclipse.org/">openMobility Interest Group</a></li>
                     </ul>
                   </div>
                   <div class="col-md text-left"><b>Support & Training</b>
                     <ul class="ul-no-bullet">
-                    <li><a href="{{ `contact` | absURL }}">Contact us</a></li>
+                    <li><a href="{{ `contact/` | absURL }}">Contact us</a></li>
                     <li><a href="{{ $.Site.Params.docsURL }}/FAQ.html">FAQ</a></li>
                     <li><a href="{{ $.Site.Params.docsURL }}/index.html">Documentation</a></li>
                     <li><a href="{{ $.Site.Params.docsURL }}/Developer/index.html">Developer Documentation</a></li>
@@ -68,10 +68,10 @@
                     <br>
                     <a href="https://www.eclipse.org/"><img class="img-fluid" src="{{ `images/logos/eclipse-logo.png` | absURL }}" alt="Eclipse Foundation logo" style="margin:10px 0; width: 100px;"></a>
                     <ul class="ul-no-bullet">
-                    <li><a href="https://www.eclipse.org/legal/privacy.php">Privacy Policy</a></li>
-                    <li><a href="https://www.eclipse.org/legal/termsofuse.php">Website terms of use</a></li>
-                    <li><a href="https://www.eclipse.org/legal/copyright.php">Copyright</a></li>
-                    <li><a href="https://www.eclipse.org/legal">Legal</a></li>
+                    <li><a href="https://www.eclipse.org/legal/privacy/">Privacy Policy</a></li>
+                    <li><a href="https://www.eclipse.org/legal/terms-of-use/">Website terms of use</a></li>
+                    <li><a href="https://www.eclipse.org/legal/copyright/">Copyright</a></li>
+                    <li><a href="https://www.eclipse.org/legal/">Legal</a></li>
                     </ul>
                   </div>
           </div>
