--- a/themes/sumo-theme/layouts/index.html
+++ b/themes/sumo-theme/layouts/index.html
@@ -385,15 +385,15 @@
       </div>
       <div class="row text-center">
         <div class="col-12">
-          The <a href="{{ `conference` | absURL }}">SUMO User Conference</a>, held every year in Berlin since 2013, is a must-attend event for anyone involved with SUMO. It gathers international participants from the industry, research and public institutions - to present (among others) projects, studies and advancements all around traffic, simulation and SUMO.
+          The <a href="{{ `conference/` | absURL }}">SUMO User Conference</a>, held every year in Berlin since 2013, is a must-attend event for anyone involved with SUMO. It gathers international participants from the industry, research and public institutions - to present (among others) projects, studies and advancements all around traffic, simulation and SUMO.
           The conference is a great place to learn about new features, network with fellow enthusiasts, ask the developers, have fruitful discussions, exchange ideas and even start collaborations!
           <br><br>
           <img width="80%" style="border: 8px solid rgb(125,174,125); border-radius: 14px" src="{{ `images/conference_2023.jpg` | absURL }}" alt="Picture of the 2023 conference attendees">
           <br><br>
-          <a class="btn btn-sm btn-light mb-1" href="{{ `conference` | absURL }}" role="button">Conference website</a>
-          <a class="btn btn-sm btn-light mb-1" href="{{ `proceedings` | absURL }}" role="button">Proceedings</a>
+          <a class="btn btn-sm btn-light mb-1" href="{{ `conference/` | absURL }}" role="button">Conference website</a>
+          <a class="btn btn-sm btn-light mb-1" href="{{ `proceedings/` | absURL }}" role="button">Proceedings</a>
           <a class="btn btn-sm btn-light mb-1" href="{{ `proceedings#editorial-team` | relURL }}" role="button">Editorial Team</a>
-          <a class="btn btn-sm btn-light mb-1" href="{{ `archive` | relURL }}" role="button">Archive</a>
+          <a class="btn btn-sm btn-light mb-1" href="{{ `archive/` | relURL }}" role="button">Archive</a>
         </div>
       </div>
     </div>
