--- a/themes/sumo-theme/layouts/partials/conference_archive.html
+++ b/themes/sumo-theme/layouts/partials/conference_archive.html
@@ -7,7 +7,7 @@
             <a class="dropdown-item" href="{{ `conference` | absURL }}">Current conference <i class="fas fa-angle-double-right"></i></a>
             {{- $editions := site.Data.previous_conferences.conferences }}
             {{- range $editions }}
-                <a class="dropdown-item" href="{{ .year | absURL }}">{{ .year }}</a>
+                <a class="dropdown-item" href="{{ .year | absURL }}/">{{ .year }}</a>
             {{- end }}
             <a class="dropdown-item" href="{{ $.Site.Params.docsURL }}/SumoWorkshop2010.html">Workshop 2010</a>
         </div>
