--- a/themes/sumo-theme/layouts/partials/footer.html
+++ b/themes/sumo-theme/layouts/partials/footer.html
@@ -37,8 +37,8 @@
                     <ul class="ul-no-bullet">
                       <li><a href="https://projects.eclipse.org/projects/automotive.sumo/who">Who's involved</a></li>
                       <li><a href="https://sumo.dlr.de/daily/">Status of daily build and tests</a></li>
-                      <li><a href="https://www.github.com/eclipse-sumo/sumo">GitHub repository</a></li>
-                      <li><a href="https://www.github.com/eclipse-sumo/sumo.website">Website GitHub repository</a></li>
+                      <li><a href="https://github.com/eclipse-sumo/sumo">GitHub repository</a></li>
+                      <li><a href="https://github.com/eclipse-sumo/sumo.website">Website GitHub repository</a></li>
                       <li><a href="https://sourceforge.net/projects/sumo/">SourceForge</a></li>
                       <!-- <li><a href="https://dlr.de/ts/en/sumo">SUMO @ DLR</a></li> -->
                       <li><a href="https://projects.eclipse.org/projects/automotive.sumo">SUMO @ Eclipse</a></li>
